@@ -4,6 +4,7 @@ import io.quarkus.hibernate.reactive.panache.common.WithTransaction;
 import io.smallrye.mutiny.Uni;
 import io.smallrye.mutiny.unchecked.Unchecked;
 import it.gov.pagopa.atmlayer.service.model.entity.BpmnBankConfig;
+import it.gov.pagopa.atmlayer.service.model.entity.BpmnVersionPK;
 import it.gov.pagopa.atmlayer.service.model.enumeration.AppErrorCodeEnum;
 import it.gov.pagopa.atmlayer.service.model.exception.AtmLayerException;
 import it.gov.pagopa.atmlayer.service.model.mapper.BpmnConfigMapper;
@@ -15,13 +16,11 @@ import jakarta.ws.rs.core.Response;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @ApplicationScoped
 public class BpmnBankConfigService {
     @Inject
     protected BpmnBankConfigRepository bankConfigRepository;
-
     @Inject
     BpmnConfigMapper bpmnConfigMapper;
 
@@ -34,6 +33,10 @@ public class BpmnBankConfigService {
         return this.bankConfigRepository.findByAcquirerIdAndFunctionType(acquirerId, functionType);
     }
 
+    public Uni<List<BpmnBankConfig>> findByBpmnVersionPK(BpmnVersionPK bpmnVersionPK){
+        return this.bankConfigRepository.findByBpmnPK(bpmnVersionPK);
+    }
+
     @WithTransaction
     public Uni<Long> deleteByAcquirerIdAndFunctionType(String acquirerId, String functionType) {
         return this.bankConfigRepository.deleteByAcquirerIdAndFunctionType(acquirerId, functionType);
@@ -42,10 +45,9 @@ public class BpmnBankConfigService {
     public Uni<Optional<BpmnBankConfig>> findByConfigurationsAndFunction(String acquirerId, String branchId, String terminalId, String functionType) {
         return this.bankConfigRepository.findByConfigAndFunctionType(acquirerId, branchId, terminalId, functionType)
                 .onItem().transformToUni(Unchecked.function(x -> {
-                    if (!x.isEmpty() && x.size() > 1) {
+                    if (x.size() > 1) {
                         throw new AtmLayerException("Multiple BPMN found for a single configuration.", Response.Status.INTERNAL_SERVER_ERROR, AppErrorCodeEnum.ATMLM_500);
                     }
-
                     return Uni.createFrom().item(x.isEmpty() ? Optional.empty() : Optional.ofNullable(x.get(0)));
                 }));
     }
@@ -60,7 +62,7 @@ public class BpmnBankConfigService {
                         return Uni.createFrom().item(
                                 configs.stream()
                                         .map(bpmnConfigMapper::toDTO)
-                                        .collect(Collectors.toList())
+                                        .toList()
                         );
                     }
                 }));
